<resources>
    <string name="app_name">project1</string>
    <string name="full_name">Full Name</string>
    <string name="welcome_image">Two people on a hiking trail</string>
    <string name="age">Age</string>
    <string name="weight">Weight (lbs)</string>
    <string name="city_country"><![CDATA[City & Country]]></string>
    <string name="height">Height (in.)</string>
    <string name="picture">Take A Picture</string>
    <string name="sign_up">Sign Up</string>

    <string-array name="activity">
        <item>Select Activity Level</item>
        <item>Sedentary</item>
        <item>Light Exercise</item>
        <item>Moderate Exercise</item>
        <item>Heavy Exercise</item>
        <item>Athlete</item>
    </string-array>
    <string-array name="sex">
        <item>Select Sex</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Settings</string>
    <string name="show_weather">Show Weather</string>
    <string name="find_hikes_near_me">Find Hikes Near Me</string>

</resources>