<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextFullName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="100dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewWelcome" />

    <ImageView
        android:id="@+id/imageViewWelcome"
        android:layout_width="fill_parent"
        android:layout_height="174dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/welcome_image"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <EditText
        android:id="@+id/editTextCityCountry"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:autofillHints="city"
        android:ems="10"
        android:hint="@string/city_country"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFullName" />

    <Spinner
        android:id="@+id/spinnerActivity"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginTop="14dp"
        android:entries="@array/activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerWeight" />


    <Spinner
        android:id="@+id/spinnerAge"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:entries="@array/activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFullName" />

    <Spinner
        android:id="@+id/spinnerWeight"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:entries="@array/activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAge" />

    <Spinner
        android:id="@+id/spinnerHeight"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:entries="@array/activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCityCountry" />

    <Button
        android:id="@+id/buttonPicture"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginTop="11dp"
        android:text="@string/picture"
        app:icon="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSex" />



    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerSex"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPicture"
        android:entries="@array/sex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerActivity" />

</androidx.constraintlayout.widget.ConstraintLayout>